--- a/case-view/timeline.html
+++ b/case-view/timeline.html
@@ -36,7 +36,45 @@ title: EHC Hub
               <ul class="list-group list-group-flush">
 
                 <li class="list-group-item timeline-header d-flex justify-content-between">
-                  <span>Max Schneider</span>
+                  <span class="flex-grow-1">Max Schneider</span>
+                  <a href="#" title="Remove case note"><i class="fal fa-trash-alt text-neutral-500 me-2"></i></a>
+                  <span class="badge text-bg-success  me-2">Note</span>
+                  <span>12 Jul 2023 11:49</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between">
+                  Phone call today at 9:50am with SENDIASS to discuss options to support Ellery's family through this process. Agreed action is for SENDIASS representative to meet with Shane Holden on Friday at the school.
+                </li>
+              </ul>
+            </div>
+          </li>
+
+          <li>
+            <span class="fa-li"><i class="fa fa-circle"></i></span>
+            <div class="card">
+
+              <ul class="list-group list-group-flush">
+
+                <li class="list-group-item timeline-header d-flex justify-content-between">
+                  <span class="flex-grow-1">Max Schneider</span>
+                  <span class="badge text-bg-primary  me-2">System</span>
+                  <span>12 Jul 2023 11:49</span>
+                </li>
+                <li class="list-group-item">
+                  Max Schneider was assigned as a Co-ordinator.
+                </li>
+              </ul>
+            </div>
+          </li>
+
+          <li>
+            <span class="fa-li"><i class="fa fa-circle"></i></span>
+            <div class="card">
+
+              <ul class="list-group list-group-flush">
+
+                <li class="list-group-item timeline-header d-flex justify-content-between">
+                  <span class="flex-grow-1">Max Schneider</span>
+                  <span class="badge text-bg-primary  me-2">System</span>
                   <span>12 Jul 2023 11:49</span>
                 </li>
                 <li class="list-group-item">
@@ -57,7 +95,8 @@ title: EHC Hub
               <ul class="list-group list-group-flush">
 
                 <li class="list-group-item timeline-header d-flex justify-content-between">
-                  <span>Max Schneider</span>
+                  <span class="flex-grow-1">Max Schneider</span>
+                  <span class="badge text-bg-primary  me-2">System</span>
                   <span>12 Jul 2023 11:49</span>
                 </li>
                 <li class="list-group-item">
@@ -73,7 +112,8 @@ title: EHC Hub
               <ul class="list-group list-group-flush">
 
                 <li class="list-group-item timeline-header d-flex justify-content-between">
-                  <span>Max Schneider</span>
+                  <span class="flex-grow-1">Max Schneider</span>
+                  <span class="badge text-bg-primary  me-2">System</span>
                   <span>12 Jul 2023 11:49</span>
                 </li>
                 <li class="list-group-item">
@@ -89,7 +129,8 @@ title: EHC Hub
               <ul class="list-group list-group-flush">
 
                 <li class="list-group-item timeline-header d-flex justify-content-between">
-                  <span>Max Schneider</span>
+                  <span class="flex-grow-1">Max Schneider</span>
+                  <span class="badge text-bg-primary  me-2">System</span>
                   <span>12 Jul 2023 11:49</span>
                 </li>
                 <li class="list-group-item">
@@ -105,7 +146,8 @@ title: EHC Hub
               <ul class="list-group list-group-flush">
 
                 <li class="list-group-item timeline-header d-flex justify-content-between">
-                  <span>Max Schneider</span>
+                  <span class="flex-grow-1">Max Schneider</span>
+                  <span class="badge text-bg-primary  me-2">System</span>
                   <span>12 Jul 2023 11:49</span>
                 </li>
                 <li class="list-group-item">
@@ -121,7 +163,8 @@ title: EHC Hub
               <ul class="list-group list-group-flush">
 
                 <li class="list-group-item timeline-header d-flex justify-content-between">
-                  <span>Max Schneider</span>
+                  <span class="flex-grow-1">Max Schneider</span>
+                  <span class="badge text-bg-primary  me-2">System</span>
                   <span>12 Jul 2023 11:49</span>
                 </li>
                 <li class="list-group-item">
