--- a/privacy/index.html
+++ b/privacy/index.html
@@ -20,7 +20,7 @@ title: Privacy
 
         <h3>Purpose</h3>
 
-        <p>The EHC Hub is a secure web portal supporting the Education, Health and Care Plan (EHC Plan) assessment, planning and review processes. </p>
+        <p>The EHC Hub is a secure web portal supporting the Education, Health and Care Plan (EHCP) assessment, planning and review processes. </p>
 
         <p>The purposes for which we are processing your personal data are:</p>
 
