--- a/admin/create-user-coordinator.html
+++ b/admin/create-user-coordinator.html
@@ -169,8 +169,8 @@ title: EHC Hub
                       <label class="form-check-label" for="checkRemoveNote" data-bs-toggle="tooltip" data-bs-title="Remove a case note from the timeline.">Remove case note</label>
                     </div>
                     <div class="mb-3 form-check">
-                      <input type="checkbox" class="form-check-input" id="checkRevert">
-                      <label class="form-check-label" for="checkRevert" data-bs-toggle="tooltip" data-bs-title="Revert a case to its previous stage.">Revert cases</label>
+                      <input type="checkbox" class="form-check-input" id="check8">
+                      <label class="form-check-label" for="check8" data-bs-toggle="tooltip" data-bs-title="Remove documents uploaded by users in a child or young person's case.">Remove documents</label>
                     </div>
                   </div>
                 </div>
@@ -199,12 +199,12 @@ title: EHC Hub
                     <label class="form-check-label" for="check6" data-bs-toggle="tooltip" data-bs-title="Manage system configurations, e.g. picklist options.">Manage system</label>
                   </div>
                   <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="check7" checked>
+                    <input type="checkbox" class="form-check-input" id="check7"checked>
                     <label class="form-check-label" for="check7" data-bs-toggle="tooltip" data-bs-title="Reassign the Case Co-ordinator for multiple cases at the same time.">Reassign cases</label>
                   </div>
                   <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="check8" checked>
-                    <label class="form-check-label" for="check8" data-bs-toggle="tooltip" data-bs-title="Remove documents uploaded by users in a child or young person's case.">Remove documents</label>
+                    <input type="checkbox" class="form-check-input" id="checkRevert" checked>
+                    <label class="form-check-label" for="checkRevert" data-bs-toggle="tooltip" data-bs-title="Revert a case to its previous stage.">Revert cases</label>
                   </div>
                 </div>
               </div>
