--- a/admin/index.html
+++ b/admin/index.html
@@ -34,11 +34,14 @@ title: Administration
               <div class="card-body">
                 <h5 class="card-title text-neutral-500">Communication</h5>
                 <ul class="list-unstyled">
+                  <li class="mb-1"><a href="#">Accessbility statement</a></li>
+                  <li class="mb-1"><a href="#">Cookies</a></li>
                   <li class="mb-1"><a href="#">Document admin</a></li>
                   <li class="mb-1"><a href="#">Email admin</a></li>
                   <li class="mb-1"><a href="#">Help</a></li>
                   <li class="mb-1"><a href="#">Onscreen guidance</a></li>
                   <li class="mb-1"><a href="/admin/admin-parent-guidance">Parent guidance</a></li>
+                  <li class="mb-1"><a href="#">Privacy</a></li>
                   <li class="mb-1"><a href="#">Reminder emails</a></li>
                   <li class="mb-1"><a href="#">Section guidance</a></li>
                   <li class="mb-1"><a href="#">Templates</a></li>
