Add links to login page

--- a/index.html
+++ b/index.html
@@ -28,12 +28,23 @@ title: EHC Hub
 			<div class="form mb-3">
 				<label for="passwordInput">Password</label>
 				<input type="password" class="form-control" id="passwordInput" placeholder="">
+				<a href="onboarding/p-reset">Forgotten password?</a>
 			</div>
 			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="/onboarding/tfa-app-auth">Log in</a>
-			<p><a href="onboarding/p-reset">Forgotten password?</a></p>
-			<p><a href="anon">Request needs assessment</a></p>
+
+			<ul class="list-group login-list mb-4">
+				<li class="me-2"><a href="anon">Request needs assessment</a></li>
+			</ul>
+
+			<ul class="list-group list-group-horizontal login-list">
+				<li class="me-2"><a href="#">Accessibility</a></li>
+				<li class="me-2"><a href="#">Cookies</a></li>
+				<li class="me-2"><a href="#">Privacy</a></li>
+			</ul>
+
 		</main>
 
+		<!--
 		<div class="fixed-message">
 			<div class="card">
 			  <div class="card-body">
@@ -44,6 +55,7 @@ title: EHC Hub
 			  </div>
 			</div>
 		</div>
+		-->
 
 	</div>
 
