Updated font to Inter

--- a/summary/index.html
+++ b/summary/index.html
@@ -111,6 +111,7 @@ title: EHC Hub
 
               </div>
               <div class="card-footer">
+                <a href="#" class="btn btn-neutral-50"><i class="fal fa-file-download me-2" aria-hidden="true"></i>Download EHCP</a>
                 <a href="#" class="btn btn-neutral-50 disabled"><i class="fal fa-pencil-alt me-2" aria-hidden="true"></i>Amend EHCP</a>
               </div>
             </div>
@@ -182,7 +183,8 @@ title: EHC Hub
 
               </div>
               <div class="card-footer">
-                <a href="#" class="btn btn-neutral-50 disabled"><i class="fal fa-arrow-circle-right me-2" aria-hidden="true"></i>Start review</a>
+                <a href="#" class="btn btn-neutral-50"><i class="fal fa-arrow-circle-right me-2" aria-hidden="true"></i>Open review</a>
+                <!-- <a href="#" class="btn btn-neutral-50 disabled"><i class="fal fa-arrow-circle-right me-2" aria-hidden="true"></i>Start review</a> -->
               </div>
             </div>
           </div>
