--- a/work-tray/index.html
+++ b/work-tray/index.html
@@ -27,10 +27,12 @@ title: Work tray
                    <tr>
                      <th scope="col" class="d-none d-md-table-cell">Photo</th>
                      <th scope="col">Name <i class="fal fa-arrow-up idx-table-sort px-1" aria-hidden="true" title="Sort"></i></th>
+                     <th scope="col" class="d-none d-md-table-cell">Case ID</th>
                      <th scope="col" class="d-none d-md-table-cell">Year group</th>
                      <th scope="col">Setting</th>
                      <th scope="col">Status</th>
                      <th scope="col" class="d-none d-md-table-cell">Next due</th>
+                     <th scope="col" class="d-none d-md-table-cell">Last updated</th>
                      <th scope="col" class="d-none d-md-table-cell">Alert</th>
                    </tr>
                  </thead>
@@ -38,19 +40,23 @@ title: Work tray
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/boy in a forest.jpg" class="rounded d-block idx-avatar-card" alt="Photo of Alvin"></td>
                      <td><a href="#">Hanson, Alvin</a></td>
+                     <td class="d-none d-md-table-cell">EHC/21/0123</td>
                      <td class="d-none d-md-table-cell">Year 9</td>
                      <td>Highfield Academy</td>
-                     <td><span class="badge text-neutral-600 bg-secondary-100 w-100" data-bs-toggle="tooltip" data-bs-title="A needs assessment is in progress">Assessment</span></td>
+                     <td><span class="badge text-neutral-600 bg-secondary-100 w-100" data-bs-toggle="tooltip" data-bs-title="A needs assessment is in progress.">Assessment</span></td>
+                     <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell"></td>
                    </tr>
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/boy running.jpg" class="rounded d-block idx-avatar-card" alt="Photo of Ellery"></td>
                      <td><a href="/case-view">Holden, Ellery</a></td>
+                     <td class="d-none d-md-table-cell">EHC/21/0123</td>
                      <td class="d-none d-md-table-cell">Year 4</td>
                      <td>Oak Junior School</td>
-                     <td><span class="badge text-neutral-600 bg-secondary-100 w-100" data-bs-toggle="tooltip" data-bs-title="A draft EHC Plan is in writing">Drafting EHCP</span></td>
+                     <td><span class="badge text-neutral-600 bg-secondary-100 w-100" data-bs-toggle="tooltip" data-bs-title="A decision whether to assess is pending.">Assessment decision</span></td>
                      <td class="d-none d-md-table-cell">14/01/2023</td>
+                     <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell">
                        <span class="badge rounded-pill bg-warning-300 text-dark" data-bs-toggle="tooltip" data-bs-title="Next due date is pending">Pending deadline</span>
                        <span class="badge rounded-pill bg-error-600" title="Safeguarding concern" data-bs-toggle="tooltip" data-bs-title="Safeguarding">SG</span>
@@ -60,27 +66,33 @@ title: Work tray
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/girl at school.jpg" class="rounded d-block idx-avatar-card" alt="Photo of  Sienna"></td>
                      <td><a href="#">Reid, Sienna</a></td>
+                     <td class="d-none d-md-table-cell">EHC/21/0123</td>
                      <td class="d-none d-md-table-cell">Year 2</td>
                      <td>St Mary's Primary</td>
-                     <td><span class="badge text-neutral-600 bg-warning-100 w-100" data-bs-toggle="tooltip" data-bs-title="A proposed amendment outside review is in writing">Drafting amendment</span></td>
+                     <td><span class="badge text-neutral-600 bg-warning-100 w-100" data-bs-toggle="tooltip" data-bs-title="A proposed amendment outside review is being drafted.">Amending EHCP</span></td>
+                     <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell"></td>
                    </tr>
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/teenager at college.jpg" class="rounded d-block idx-avatar-card" alt="Photo of Chandler"></td>
                      <td><a href="#">Tate, Chandler</a></td>
+                     <td class="d-none d-md-table-cell">EHC/21/0123</td>
                      <td class="d-none d-md-table-cell">Year 13</td>
                      <td>Greenhill School</td>
-                     <td><span class="badge text-neutral-600 bg-secondary-100 w-100" data-bs-toggle="tooltip" data-bs-title="Information gathering following a request for assessment">Information gathering</span></td>
+                     <td><span class="badge text-neutral-600 bg-error-100 w-100" data-bs-toggle="tooltip" data-bs-title="A review meeting has been arranged and views are being gathered.">Review arranged</span></td>
+                     <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell"><span class="badge rounded-pill bg-danger" data-bs-toggle="tooltip" data-bs-title="Next due date is overdue">Overdue deadline</span></td>
                    </tr>
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/placeholder.jpeg" class="rounded d-block idx-avatar-card" alt="Photo of Victor"></td>
                      <td><a href="/case-view/views">Wagner, Victor</a></td>
+                     <td class="d-none d-md-table-cell">EHC/21/0123</td>
                      <td class="d-none d-md-table-cell">Year 11</td>
                      <td>Greenhill School</td>
-                     <td><span class="badge text-neutral-600 bg-error-100 w-100" data-bs-toggle="tooltip" data-bs-title="A review meeting has been arranged and gathering views">Review arranged</span></td>
+                     <td><span class="badge text-neutral-600 bg-error-100 w-100" data-bs-toggle="tooltip" data-bs-title="A review report is being drafted.">Review report</span></td>
+                     <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell"></td>
                    </tr>
