--- a/summary/index.html
+++ b/summary/index.html
@@ -19,7 +19,7 @@ title: Case summary
           </div>
           <div class="flex-grow-1 ms-3">
             <div class="d-flex justify-content-between">
-              <h1 class="mb-0">Jeremy Harrison "Jez"</h1>
+              <h1 class="mb-0">Chandler Tate</h1>
               <div class="dropdown ps-2 ms-auto">
                 <a class="btn btn-neutral-50" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   <i class="fal fa-cog" aria-hidden="true"></i>
@@ -32,7 +32,7 @@ title: Case summary
               </div>
             </div>
             <div class="d-none d-md-flex align-items-center">
-              16 (01/02/2007) :: Greenhill School (Year 12) :: <span class="badge rounded-pill bg-error-600 ms-1" data-bs-toggle="tooltip" data-bs-title="Safeguarding concern">SG</span><span class="badge rounded-pill bg-success-700 ms-1" data-bs-toggle="tooltip" data-bs-title="Looked After Child">LAC</span>
+              16 (01/02/2007) :: Greenhill School (Year 13) :: <span class="badge rounded-pill bg-error-600 ms-1" data-bs-toggle="tooltip" data-bs-title="Safeguarding concern">SG</span><span class="badge rounded-pill bg-success-700 ms-1" data-bs-toggle="tooltip" data-bs-title="Looked After Child">LAC</span>
             </div>
           </div>
         </div>
@@ -46,7 +46,7 @@ title: Case summary
         <div class="d-flex">
           <div class="flex-grow-1">
             <select class="form-select" aria-label="Select case">
-              <option selected>EHC/16/0047 :: Review pending</option>
+              <option selected>EHC/21/0123 :: Review pending</option>
               <option value="1">EHC/15/0198 :: Decision made not to assess</option>
             </select>
           </div>
