--- a/work-tray/index.html
+++ b/work-tray/index.html
@@ -76,7 +76,7 @@ title: Work tray
                    </tr>
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/teenager at college.jpg" class="rounded d-block idx-avatar-card" alt="Photo of Chandler"></td>
-                     <td><a href="#">Tate, Chandler</a></td>
+                     <td><a href="/summary">Tate, Chandler</a></td>
                      <td class="d-none d-md-table-cell">EHC/21/0123</td>
                      <td class="d-none d-md-table-cell">Year 13</td>
                      <td>Greenhill School</td>
