Updated summary page

--- a/summary/index.html
+++ b/summary/index.html
@@ -13,59 +13,51 @@ title: Case summary
       <div class="col">
 
         <!-- Subject details -->
-        <div class="d-flex">
-          <div class="flex-shrink-0">
-            <img src="/assets/images/teenager at college.jpg" class="rounded-1 d-block idx-avatar-card" alt="Photo of Chandler">
+        <div class="d-flex align-items-start">
+
+          <div class="d-flex align-items-center">
+            <img src="/assets/images/teenager at college.jpg" class="rounded-1 d-block idx-avatar-card me-3" alt="Photo of Chandler">
+            <h2 class="text-dark mb-0">Chandler<br>Tate</h2>
           </div>
-          <div class="flex-grow-1 ms-3">
-            <div class="d-flex justify-content-between">
-              <h1 class="mb-0">Chandler Tate</h1>
-              <div class="dropdown ps-2 ms-auto">
-                <a class="btn btn-neutral-50" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  <i class="fal fa-cog" aria-hidden="true"></i>
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </div>
+
+          <div class="vr d-none d-sm-block mx-3 mx-lg-8"></div>
+
+          <div class="row nbm no-wrap">
+            <div class="col d-none d-sm-block">
+              <span class="text-muted"><small>Date of birth</small></span>
+              <p>01/02/2007 (16)</p>
+              <span class="text-muted"><small>Case ID</small></span>
+              <p>EHC/21/0123</p>
             </div>
-            <div class="d-none d-md-flex align-items-center">
-              16 (01/02/2007) :: Greenhill School (Year 13) :: <span class="badge rounded-pill bg-error-600 ms-1" data-bs-toggle="tooltip" data-bs-title="Safeguarding concern">SG</span><span class="badge rounded-pill bg-success-700 ms-1" data-bs-toggle="tooltip" data-bs-title="Looked After Child">LAC</span>
+            <div class="col d-none d-md-block">
+              <span class="text-muted"><small>Setting</small></span>
+              <p>Greenhill School (Year 13)</p>
+              <span class="text-muted"><small>Tags</small></span>
+              <p><span class="badge rounded-pill bg-error-600 me-1" data-bs-toggle="tooltip" data-bs-title="Safeguarding concern">SG</span><span class="badge rounded-pill bg-success-700" data-bs-toggle="tooltip" data-bs-title="Looked After Child">LAC</span></p>
+            </div>
+          </div>
+
+          <div class="ms-auto">
+            <div class="dropdown ps-2">
+              <a class="btn btn-neutral-50" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="fal fa-ellipsis-v-alt px-1"></i>
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Child details</a></li>
+                <li><a class="dropdown-item" href="#">Change picture</a></li>
+                <li><a class="dropdown-item" href="#">Case timeline</a></li>
+                <li><a class="dropdown-item" href="#">Close case</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><h6 class="dropdown-header">Other cases</h6></li>
+                <li><a class="dropdown-item" href="#">EHC/15/0198</a></li>
+              </ul>
             </div>
           </div>
         </div>
+
         <!-- End of subject details -->
 
-        <hr>
-
-        <!-- Case details -->
-
-        <!-- Case actions -->
-        <div class="d-flex">
-          <div class="flex-grow-1">
-            <select class="form-select" aria-label="Select case">
-              <option selected>EHC/21/0123 :: Review pending</option>
-              <option value="1">EHC/15/0198 :: Decision made not to assess</option>
-            </select>
-          </div>
-          <div class="ps-2">
-            <a href="#" class="btn btn-neutral-50"><i class="fal fa-file-download" aria-hidden="true"></i>
-              <span class="d-none d-md-inline-block ms-2">Download plan</span>
-            </a>
-          </div>
-          <div class="dropdown ps-2 ms-auto">
-            <a class="btn btn-neutral-50" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="fal fa-cog" aria-hidden="true"></i>
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </div>
-        </div>
+        <!-- <hr>
 
         <!-- Callout -->
         <div class="callout callout-info">
@@ -470,9 +462,6 @@ title: Case summary
         </div>
 
         <!-- End of cards -->
-
-
-        <!-- End of case details -->
 
       </div>
     </div>
