--- a/summary/index.html
+++ b/summary/index.html
@@ -12,75 +12,17 @@ title: Case summary
     <div class="row">
       <div class="col">
 
-        <!-- Subject details -->
-        <div class="d-flex align-items-start">
+        {% include case-details.html %}
 
-          <div class="d-flex align-items-center">
-            <img src="/assets/images/teenager at college.jpg" class="rounded-1 d-block idx-avatar-card me-3" alt="Photo of Chandler">
-            <h2 class="text-dark mb-0">Chandler<br>Tate</h2>
-          </div>
-
-          <div class="vr d-none d-md-block mx-3 mx-lg-8"></div>
-
-          <div class="row d-none d-md-flex nbm no-wrap">
-            <div class="col">
-              <span class="text-muted"><small>Date of birth</small></span>
-              <p>01/02/2007 (16)</p>
-              <span class="text-muted"><small>Case ID</small></span>
-              <p>EHC/21/0123</p>
-            </div>
-            <div class="col">
-              <span class="text-muted"><small>Setting</small></span>
-              <p>Greenhill School (Year 13)</p>
-              <span class="text-muted"><small>Tags</small></span>
-              <p><span class="badge rounded-pill bg-error-600 me-1" data-bs-toggle="tooltip" data-bs-title="Safeguarding concern">SG</span><span class="badge rounded-pill bg-success-700" data-bs-toggle="tooltip" data-bs-title="Looked After Child">LAC</span></p>
-            </div>
-          </div>
-
-          <div class="d-flex ms-auto">
-            <a class="btn btn-neutral-50 d-md-none" role="button" data-bs-toggle="collapse" href="#case-details" aria-controls="case-details" aria-expanded="false" aria-label="Toggle details">
-              <span class="visually-hidden">Details</span><i class="far fa-info-circle" aria-hidden="true"></i>
-            </a>
-            <div class="dropdown ps-2">
-              <a class="btn btn-neutral-50" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="fal fa-ellipsis-v-alt px-1"></i>
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Child details</a></li>
-                <li><a class="dropdown-item" href="#">Change picture</a></li>
-                <li><a class="dropdown-item" href="#">Case timeline</a></li>
-                <li><a class="dropdown-item" href="#">Close case</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><h6 class="dropdown-header">Other cases</h6></li>
-                <li><a class="dropdown-item" href="#">EHC/15/0198</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-        <div class="collapse d-md-none row nbm no-wrap mt-3" id="case-details">
-          <div class="col">
-            <span class="text-muted"><small>Date of birth</small></span>
-            <p>01/02/2007 (16)</p>
-            <span class="text-muted"><small>Case ID</small></span>
-            <p>EHC/21/0123</p>
-          </div>
-          <div class="col">
-            <span class="text-muted"><small>Setting</small></span>
-            <p>Greenhill School (Year 13)</p>
-            <span class="text-muted"><small>Tags</small></span>
-            <p><span class="badge rounded-pill bg-error-600 me-1" data-bs-toggle="tooltip" data-bs-title="Safeguarding concern">SG</span><span class="badge rounded-pill bg-success-700" data-bs-toggle="tooltip" data-bs-title="Looked After Child">LAC</span></p>
-          </div>
-        </div>
-
-        <!-- End of subject details -->
-
-        <!-- <hr>
-
-        <!-- Callout -->
+        <!-- Callout --
         <div class="callout callout-info">
           <p>The EHC Plan (EHCP) must be reviewed by <strong>1 Jan 2025</strong>. For phase transfers, this is the date by when an amended plan must be finalised. For all other reviews, this is the date by when the local authority must publish their decision on the review outcome. To meet this deadline, it's recommended the review be started by <strong>16 May 2024</strong>.
-          <div class="mt-2"><a href="#" class="btn btn-neutral-50"><i class="fal fa-arrow-circle-right me-2" aria-hidden="true"></i>Start review</a></div>
+          <div class="mt-2"><a href="/case-view/assessment-alternate" class="btn btn-neutral-50"><i class="fal fa-arrow-circle-right me-2" aria-hidden="true"></i>Start review</a></div>
+        </div> -->
+
+        <div class="callout callout-info">
+          <p>An EHC needs assessment is in progress under Section 36 (1) of the Children and Families Act 2014. Please ensure that all relevant professional contributors have been requested to provide advice and the family have appropriate support in place to complete the "About me" and "Parent/carer's views". A decision to issue an EHC Plan or not is due by <strong>14 Jan 2023</strong>.</p>
+          <div class="mt-2"><a href="/case-view/assessment-alternate" class="btn btn-neutral-50"><i class="fal fa-arrow-circle-right me-2" aria-hidden="true"></i>View assessment</a></div>
         </div>
 
         <!-- Cards -->
