Updated alternate assessment stage

--- a/case-view/assessment-alternate.html
+++ b/case-view/assessment-alternate.html
@@ -27,7 +27,7 @@ title: EHC Hub
         </div>
 
         <!-- Callout -->
-        <div class="callout callout-info">
+        <div class="callout callout-info mb-0">
           <h5>EHC Needs Assessment</h5>
           <p>Assessment process under Section 36 (1) of the Children and Families Act 2014. Please ensure that all relevant professional contributors have been requested to provide advice and the family have appropriate support in place to complete the "About me" and "Parent/carer's views" below.</p>
         </div>
@@ -46,8 +46,8 @@ title: EHC Hub
                  <th scope="col">Job title</th>
                  <th scope="col">Specialism</th>
                  <th scope="col">Requested</th>
-                 <th scope="col">Request due</th>
-                 <th scope="col">Request completed</th>
+                 <th scope="col">Due</th>
+                 <th scope="col">Completed</th>
                  <th scope="col">Status</th>
                  <th scope="col">Action</th>
                </tr>
@@ -63,7 +63,7 @@ title: EHC Hub
                  <td></td>
                  <td><span class="badge text-bg-warning w-100">Pending</span></td>
                  <td class="no-wrap">
-                   <a href="#" title="Edit user" class="me-3"><i class="fal fa-times-circle me-1"></i>Close</a>
+                   <a href="#" title="Close request" class="me-3" data-bs-toggle="tooltip" data-bs-title="Close request"><i class="fal fa-times-circle me-1"></i></a>
                  </td>
                </tr>
                <tr>
@@ -76,7 +76,7 @@ title: EHC Hub
                  <td>10/11/2022</td>
                  <td><span class="badge text-bg-danger w-100">Closed</span></td>
                  <td class="no-wrap">
-                   <a href="#" title="Edit user" class="me-3"><i class="fal fa-redo me-1"></i>Re-open</a>
+                   <a href="#" title="Re-open request" class="me-3" data-bs-toggle="tooltip" data-bs-title="Re-open request"><i class="fal fa-redo me-1"></i></a>
                  </td>
                </tr>
                <tr>
@@ -89,8 +89,8 @@ title: EHC Hub
                  <td>06/11/2022</td>
                  <td><span class="badge text-bg-success w-100">Completed</span></td>
                  <td class="no-wrap">
-                   <a href="#" title="Edit user" class="me-3"><i class="fal fa-redo me-1"></i>Re-open</a>
-                   <a href="#" title="Edit user" class="me-3"><i class="fal fa-file-alt me-1"></i>Read</a>
+                   <a href="#" title="Read response" class="me-3" data-bs-toggle="tooltip" data-bs-title="Read response"><i class="fal fa-book-open me-1"></i></a>
+                   <a href="#" title="Re-open request" class="me-3" data-bs-toggle="tooltip" data-bs-title="Re-open request"><i class="fal fa-redo me-1"></i></a>
                  </td>
                </tr>
                <tr>
@@ -103,7 +103,7 @@ title: EHC Hub
                  <td></td>
                  <td><span class="badge text-bg-warning w-100">Pending</span></td>
                  <td class="no-wrap">
-                   <a href="#" title="Edit user" class="me-3"><i class="fal fa-times-circle me-1"></i>Close</a>
+                   <a href="#" title="Close request" class="me-3" data-bs-toggle="tooltip" data-bs-title="Close request"><i class="fal fa-times-circle me-1"></i></a>
                  </td>
                </tr>
                <tr>
@@ -115,7 +115,7 @@ title: EHC Hub
                  <td></td>
                  <td><span class="badge text-bg-warning w-100">Pending</span></td>
                  <td class="no-wrap">
-                   <a href="#" title="Edit user" class="me-3"><i class="fal fa-times-circle me-1"></i>Close</a>
+                   <a href="#" title="Close request" class="me-3" data-bs-toggle="tooltip" data-bs-title="Close request"><i class="fal fa-times-circle me-1"></i></a>
                  </td>
                </tr>
                <tr>
@@ -127,8 +127,8 @@ title: EHC Hub
                  <td></td>
                  <td><span class="badge text-bg-success w-100">Completed</span></td>
                  <td class="no-wrap">
-                   <a href="#" title="Edit user" class="me-3"><i class="fal fa-redo me-1"></i>Re-open</a>
-                   <a href="#" title="Edit user" class="me-3"><i class="fal fa-file-alt me-1"></i>Read</a>
+                   <a href="#" title="Read response" class="me-3" data-bs-toggle="tooltip" data-bs-title="Read response"><i class="fal fa-book-open me-1"></i></a>
+                   <a href="#" title="Re-open request" class="me-3" data-bs-toggle="tooltip" data-bs-title="Re-open request"><i class="fal fa-redo me-1"></i></a>
                  </td>
                </tr>
                <tr>
@@ -141,8 +141,8 @@ title: EHC Hub
                  <td>06/11/2022</td>
                  <td><span class="badge text-bg-success w-100">Completed</span></td>
                  <td class="no-wrap">
-                   <a href="#" title="Edit user" class="me-3"><i class="fal fa-redo me-1"></i>Re-open</a>
-                   <a href="#" title="Edit user" class="me-3"><i class="fal fa-file-alt me-1"></i>Read</a>
+                   <a href="#" title="Read response" class="me-3" data-bs-toggle="tooltip" data-bs-title="Read response"><i class="fal fa-book-open me-1"></i></a>
+                   <a href="#" title="Re-open request" class="me-3" data-bs-toggle="tooltip" data-bs-title="Re-open request"><i class="fal fa-redo me-1"></i></a>
                  </td>
                </tr>
              </tbody>
