--- a/summary/index.html
+++ b/summary/index.html
@@ -14,6 +14,17 @@ title: Case summary
 
         {% include case-details.html %}
 
+        <hr>
+
+        <div class="d-flex justify-content-between text-neutral-500">
+          <nav aria-label="breadcrumb">
+            <ol class="breadcrumb mb-0">
+              <li class="breadcrumb-item active" aria-current="page">Case home</li>
+            </ol>
+          </nav>
+          <p class="mb-0">Plan decision due: 14 Jan 2023</p>
+        </div>
+
         <!-- Callout --
         <div class="callout callout-info">
           <p>The EHC Plan (EHCP) must be reviewed by <strong>1 Jan 2025</strong>. For phase transfers, this is the date by when an amended plan must be finalised. For all other reviews, this is the date by when the local authority must publish their decision on the review outcome. To meet this deadline, it's recommended the review be started by <strong>16 May 2024</strong>.
